tests/paczka1/fuzzy1/35861358.err
Error in line 11: SuyW S703 53,3
Error in line 16: mUxuRIQ A258 80,7
Error in line 28: 1iv9 S70k 1k2,5
